# LittleMayaEngine

./: CMakeLists.txt  LittleMayaEngine.cpp  LittleMayaEngine.h  README.md  main.cpp
core/: App.cpp  App.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Logger.cpp  Logger.h  Utils.h  Window.cpp  Window.h
ecs/: GameObject.cpp  GameObject.h
render/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
shaders/: point_light.frag  point_light.vert  shader.frag  shader.vert
systems/: EventSystem.cpp  EventSystem.h  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
